docker-compose.yml update(add secrets)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
     volumes:
       - djangomyself_static:/home/DjangoMyself/staticfiles/
       - djangomyself_media:/home/DjangoMyself/media/
+    secrets:
+      - DJANGO_SECRET_KEY
 
   mariadb:
     image: mariadb:10.5
@@ -40,3 +42,7 @@ volumes:
   djangomyself_static:
   djangomyself_media:
   djangomyself_mariadb:
+
+secrets:
+  DJANGO_SECRET_KEY:
+    external: true
